Formatting whitespace + fix small cell

--- a/src/client/pages/Sia/Sia.module.scss
+++ b/src/client/pages/Sia/Sia.module.scss
@@ -15,17 +15,24 @@
   tr td:nth-child(1) {
     width: 15%;
   }
+
   tr td:nth-child(2) {
     width: 40%;
   }
+
   tr td:nth-child(3) {
     width: 20%;
   }
 
   @include mq-tablet() {
+    tr td:nth-child(1) {
+      width: 100%;
+    }
+
     tr td:nth-child(2) {
       width: 100%;
     }
+
     @include select(Table_DisplayPropTitle) {
       width: 100%;
     }
